# rocket-restful-api

./: Cargo.toml  README.md
src/: database.rs  main.rs
src/entities/: mod.rs  participant.rs  prize.rs  promotion.rs  promotion_result.rs
src/routes/: mod.rs  participant.rs  prize.rs  promo.rs
