[package]
name = "restful-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = "0.6.0-alpha1"
rocket_okapi = { version = "0.8.0-rc.1", features = ["swagger"] }
serde = "1.0.136"
serde_json = "1.0.79"